cross build for sbt2