@@ -1,3 +1,5 @@
+Global / onChangedBuildSource := ReloadOnSourceChanges
+
 ThisBuild / scalafmtOnCompile := true
 
 ThisBuild / versionScheme := Some("early-semver")
@@ -11,16 +13,39 @@ val commonSettings = Seq(
       "scm:git:github.com:tkawachi/sbt-repeat.git"
     )
   ),
-  scalaVersion := "2.12.13",
+  scalaVersion := "2.12.14",
+  crossScalaVersions := Seq(scalaVersion.value, "3.8.2"),
+  (pluginCrossBuild / sbtVersion) := {
+    scalaBinaryVersion.value match {
+      case "2.12" => "1.5.8"
+      case _      => "2.0.0-RC10"
+    }
+  },
   scalacOptions ++= Seq(
     "-deprecation",
     "-encoding",
     "UTF-8",
     "-feature",
-    "-unchecked",
-    "-Xfatal-warnings",
-    "-Xlint"
-  )
+    "-unchecked"
+  ),
+  scalacOptions ++= {
+    scalaBinaryVersion.value match {
+      case "2.12" =>
+        Seq(
+          "-release",
+          "8",
+          "-target:jvm-1.8",
+          "-Xfatal-warnings",
+          "-Xlint"
+        )
+      case _ =>
+        Seq(
+          "-release:17",
+          "-Werror",
+          "-Wshadow:all"
+        )
+    }
+  }
 )
 
 lazy val root = project
@@ -33,7 +58,6 @@ lazy val root = project
       scriptedLaunchOpts.value ++
         Seq(
           "-Xmx1024M",
-          "-XX:MaxPermSize=256M",
           "-Dplugin.version=" + version.value
         )
     },
